test/functions/this/bradc/domainSliceConfusion.good
domainSliceConfusion.chpl:8: In function 'this':
domainSliceConfusion.chpl:9: error: unresolved access of '[domain(1,int,false)] real' by '(int(64))'
